更新了zh目录下的文件，包括Makefile、intro.tex、latexmkrc等，以及媒体文件和yaii-style.sty，完善了手册内容。

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,12 @@
-version: "3.8"
 services:
-  yaii-manual:
+  latex:
     build: .
     volumes:
       - ./zh:/book/zh
-      - ./docs:/book/docs
+      - ./docs/zh:/book/zh/html
+      - ./build/zh:/book/zh/build
+volumes:
+  build:
+    external: true
+  docs:
+    external: true
